fix(googlemaps): entire web content reworked to use flexbox alignment + table aligned properly + added some responsiveness to map

--- a/frontend/src/Accordion.css
+++ b/frontend/src/Accordion.css
@@ -21,6 +21,8 @@
 .accordion:hover,
 .active{
     background-color: #38486D;;
+    box-shadow: 0px 0px 30px #858585;
+    transition: 0.3s
 }
 
 .accordion-title{
